# design-patterns-play

./: README
anagy/src/: Facade.cpp  Flyweight.cpp
marci2/expression_templates/: expression.cpp  naive.cpp  test.sh
susu/: CMakeLists.txt  README  README-susu
susu/include/decorator/: PrinterDecorator.hpp  PrinterIf.hpp  SimplePrinter.hpp  UnderlineDecorator.hpp
susu/include/observer/: Observer.hpp  Subject.hpp
susu/include/singleton/: SingletonCallOnce.hpp  SingletonCallOnce.tcc  SingletonCallOnceBoost.hpp  SingletonCallOnceBoost.tcc
susu/src/: Observer.cpp  PrinterDecorator.cpp  SimplePrinter.cpp  Subject.cpp  UnderlineDecorator.cpp
susu/test/: TestDecorator.hpp  TestObserverPattern.hpp  TestSingleton.hpp  TestSingletonBoost.hpp  TestSubject.hpp  cxxtest_ext.hpp
tacsko/adapterexample/: README  main.cpp
tacsko/bridgeexample/: Logger.cpp  Logger.hpp  LoggerPlatform.cpp  LoggerPlatform.hpp  Makefile  README  main.cpp
tacsko/compiletimeassert/: README.md  compiletime.cpp  ctassert.hpp  ctassert2.hpp
tacsko/pimpl/: Makefile  Pimpl.cpp  Pimpl.hpp  README  main.cpp
tacsko/strategyexample/: README  main.cpp
zdekany/Builder/: Builder.cpp
zdekany/Chain of Responsibility/: example.cpp
zdekany/Command/: example.cpp
zdekany/Multiton/: Multiton.cpp
zdekany/Prototype/: prototype.cpp
zdekany/Proxy/: proxy.cpp
zdekany/Widget Factory/: Widget_Factory.cpp
